name:                svfactor-examples
version:             0.1
synopsis:            Examples of svfactor usage
description:         Examples of svfactor usage. This can be run as a test-suite
homepage:            https://github.com/qfpl/svfactor
license:             BSD3
license-file:        LICENCE
author:              George Wilson
maintainer:          george@wils.online
copyright:           Copyright (c) 2017-2018, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
category:            Example
build-type:          Simple
extra-source-files:  changelog.md
                     , csv/concat.csv
                     , csv/requote.csv
                     , csv/requote.golden.csv
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3
                     , GHC == 8.0.2
                     , GHC == 8.2.2
                     , GHC == 8.4.3

library
  exposed-modules:     Data.Svfactor.Example.Concat
                       , Data.Svfactor.Example.Requote
  build-depends:       base >= 4.8 && < 5
                       , sv
                       , svfactor
                       , bytestring >= 0.9.1.10 && < 0.11
                       , contravariant-extras >= 0.3 && < 0.4
                       , lens >= 4 && < 5
                       , parsers >= 0.12 && <0.13
                       , semigroups >= 0.18 && < 0.19
                       , semigroupoids >= 5 && <6
                       , text >= 1.0 && < 1.3
                       , time >= 1.5 && < 1.10
                       , trifecta >= 1.5 && < 1.8
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base >= 4.8 && < 5
                       , svfactor-examples
